# project-template

./: .dockerignore  .env.docker  .env.example  .env.nexus-clean  .env.nexus-production  .env.production.example  .gitignore  ACTUAL_FIX_VERIFIED.md  AI_AUTHENTICATION_BYPASS_RESEARCH.md  AI_CHAT_FIX_DEPLOYMENT_GUIDE.md  AI_MODEL_CONFIGURATION_BRUTAL_TRUTH.md  AI_MODEL_QUICK_REFERENCE.md  AUTHENTICATION_TESTING_STRATEGY.md  CLAUDE.md  CLEANUP_PLAN.md  CLOUD_DEPLOYMENT_ARCHITECTURE.md  CLOUD_DEPLOYMENT_QUICKSTART.md  CONTINUE_ERP_EXTRACTION_GUIDE.md  CRITICAL_CATALOGUE_ID_DATA_ISSUE.md  CRITICAL_PRICING_DATA_ANALYSIS.md  DATA_SOURCES_SAFETY_STANDARDS.md  DEBUGGING_PLAN_DOCUMENT_EXTRACTION.md  DEMO_PORT_REFERENCE.md  DEPLOYMENT_GUIDE.md  Dockerfile.api  Dockerfile.api.uv  Dockerfile.email-monitor  Dockerfile.healthcheck  Dockerfile.mcp  Dockerfile.nexus  Dockerfile.nexus-clean  Dockerfile.nexus-optimized  Dockerfile.nexus.uv  Dockerfile.postgres  Dockerfile.sales-assistant  Dockerfile.websocket  Dockerfile.websocket.uv  EMAIL_CONNECTION_FIX_GUIDE.md  EMAIL_MONITOR_FIXED_STATUS.md  EMAIL_PROCESSING_FIXES_2025-10-27.md  (+103 more)
data/: horme_simplified.db  quotations.db
src/job_pricing/: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  API_INTEGRATION_COMPLETE.md  BIPO_HRIS_IMPLEMENTATION.md  BROWSER_TEST_INSTRUCTIONS.md  COMPLETION_SUMMARY_2025-11-16.md  COMPLETION_SUMMARY_CURRENT_SESSION.md  COMPREHENSIVE_FUNCTIONAL_CRITIQUE.md  CRITICAL_PRODUCTION_ASSESSMENT.md  DEPLOYMENT.md  DEPLOYMENT_AGENT.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_READINESS.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.test  E2E_TEST_PLAN.md  EXTERNAL_APPLICANTS_INTEGRATION.md  FINAL_PRODUCTION_READINESS_REPORT.md  FINAL_STATUS_SESSION_2.md  FINAL_SYSTEM_DEMO.py  HYBRID_LLM_IMPLEMENTATION.md  IMPLEMENTATION_REPORT.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  MERCER_INTEGRATION_ROOT_CAUSE.md  MERCER_INVESTIGATION_FINDINGS.md  MIGRATION_TO_UV.md  MIGRATION_VALIDATION_REPORT.md  MVP_INFRASTRUCTURE_SIZING.md  MVP_TESTING_SPECS.md  PHASE1_COMPLETE_SUMMARY.md  PHASE1_PROGRESS_SUMMARY.md  PHASE2_PROGRESS_SUMMARY.md  PHASE4_COMPLETE.md  PHASE4_COMPLETION.md  (+65 more)
src/job_pricing/adr/: 002-repository-pattern-refactoring.md
src/job_pricing/alembic/: env.py
src/job_pricing/alembic/versions/: 001_initial_schema.py  002_add_tpc_fields.py  004_add_authentication_tables.py  005_add_deduplication_and_versioning.py  43cad0d7c2ba_add_applicant_extended_fields.py
src/job_pricing/data/: README.md
src/job_pricing/data/ingestion/: __init__.py  base_loader.py  batch_processor.py  excel_loader.py  generate_embeddings.py  load_all_mercer_jobs.py  mercer_job_library_loader.py  mercer_job_library_loader_enhanced.py  mercer_market_data_loader.py  ssg_job_roles_loader.py  ssg_mappings_loader.py  ssg_tsc_loader.py
src/job_pricing/data/migrations/: 003_pricing_parameters.sql
src/job_pricing/data/raw/mercer/: README.md
src/job_pricing/data/raw/ssg/: README.md
src/job_pricing/data/seed/: load_seed_data.py  load_ssg_job_roles.py  load_ssg_tsc.py
src/job_pricing/data/seeds/: seed_pricing_parameters.sql
src/job_pricing/data/validation/: __init__.py  base_validator.py  field_validators.py  mercer_validator.py  quality_metrics.py  ssg_validator.py
src/job_pricing/db/init/: 01-init.sql  02-extensions.sql
src/job_pricing/db/seeds/: 01-locations-fixed.sql  01-locations.sql  02-grade-salary-bands-fixed.sql  02-grade-salary-bands.sql  README.md
src/job_pricing/docs/: PRICING_ALGORITHM.md  docker-troubleshooting.md  phase2-completion-checklist.md  phase2-status-summary.md
src/job_pricing/docs/api/: openapi.yaml
src/job_pricing/docs/architecture/: data_models.md  dynamic_pricing_algorithm.md  system_architecture.md
src/job_pricing/docs/integration/: mercer_ipe_integration.md  ssg_skillsfuture_integration.md  web_scraping_integration.md
src/job_pricing/docs/referenceFE/: README.md  package.json  tailwind.config.ts
src/job_pricing/docs/referenceFE/app/: globals.css  layout.tsx
src/job_pricing/docs/referenceFE/components/: aacc-chart.tsx  assessment-form.tsx  assessment-results-uploader.tsx  candidate-analysis-table.tsx  coming-soon-page.tsx  consciousness-line-indicator.tsx  consciousness-map-chart.tsx  consciousness-shift-chart.tsx  cv-batch-uploader.tsx  dashboard-shell.tsx  document-directory-form.tsx  document-type-form.tsx  four-mindsets-chart.tsx  irtf-chart.tsx  leadership-attributes-chart.tsx  main-nav.tsx  mintzberg-roles-chart.tsx  network-graph.tsx  performance-chart.tsx  performance-matrix-chart.tsx  roles-relationships-chart.tsx  sidebar.tsx  team-comparison-chart.tsx  team-dynamics-chart.tsx  team-member-card.tsx  team-network-graph.tsx  top-nav.tsx  user-nav.tsx  x-factor-radar-chart.tsx
src/job_pricing/frontend/: .dockerignore  Dockerfile  FRONTEND_CLEANUP_PLAN.md  README.md  next.config.js  package-lock.json  package.json
src/job_pricing/frontend/app/: layout.tsx  page.tsx  providers.tsx
src/job_pricing/frontend/components/: dashboard-shell.tsx
src/job_pricing/frontend/contexts/: AuthContext.tsx
src/job_pricing/frontend/hooks/: useExternalApplicants.ts  useGlassdoorData.ts  useInternalHRIS.ts  useMyCareersFutureJobs.ts  useSalaryRecommendation.ts
src/job_pricing/nginx/: generate-ssl-certs.sh  nginx.conf
src/job_pricing/scripts/: deploy.sh
src/job_pricing/src/job_pricing/: exceptions.py  test_mcf_scraper.py  worker.py
src/job_pricing/tests/: README.md  conftest.py
src/job_pricing/tests/integration/: conftest.py  test_health_checks.py  test_pricing_v3_data_sources.py  test_pricing_workflow.py  test_repositories.py  test_salary_recommendation_api.py  test_salary_recommendation_service.py
src/job_pricing/tests/performance/: test_load_testing.py
src/job_pricing/tests/unit/: test_exceptions.py  test_pricing_calculation_service.py  test_refresh_market_data.py
src/job_pricing/todos/: 000-master.md  PHASES_SUMMARY.md  README.md
src/job_pricing/todos/active/: 001-phase1-foundation.md  002-phase2-database.md  003-phase3-data-ingestion.md
(+1086 files in other folders)
