# ============================================================================
# Horme POV - Production AI Recommendation System
# UV Package Manager Configuration
# ============================================================================
#
# This configuration consolidates all dependencies for the main production
# project. Sub-projects (src/new_project, src/knowledge_graph) maintain
# separate requirements.txt for isolation.
#
# Usage:
#   uv sync                    # Install all dependencies
#   uv sync --no-dev           # Production dependencies only
#   uv add <package>           # Add new dependency
#   uv lock                    # Update lockfile
#
# ============================================================================

[project]
name = "horme-pov"
version = "1.0.0"
description = "Enterprise AI-powered DIY hardware recommendation and RFP processing system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
    {name = "Horme POV Team"}
]
keywords = ["ai", "recommendation", "rfp", "diy", "hardware", "enterprise"]

# ============================================================================
# PRODUCTION DEPENDENCIES
# All versions pinned for reproducible builds
# ============================================================================

dependencies = [
    # Core Web Framework
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",

    # Database - PostgreSQL
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.9",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",

    # Database - Neo4j Knowledge Graph
    "neo4j==5.16.0",

    # Cache - Redis
    "redis==5.0.1",
    "hiredis==2.3.2",

    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "cryptography==42.0.0",
    "pyjwt==2.8.0",

    # OpenAI LLM Integration (✅ Standardized to 1.51.2)
    "openai==1.51.2",

    # NLP & ML Libraries
    "sentence-transformers==2.3.1",
    "transformers==4.37.0",
    "torch==2.1.2",
    "scikit-learn==1.4.0",
    "numpy==1.26.3",
    "pandas==2.1.4",

    # Vector Database & Embeddings
    "chromadb==0.4.22",
    "langchain==0.1.0",
    "langchain-openai==0.0.5",

    # Data Processing
    "openpyxl==3.1.2",
    "xlsxwriter==3.1.9",
    "python-dateutil==2.8.2",

    # HTTP & API Clients
    "httpx==0.26.0",
    "requests==2.31.0",
    "aiohttp==3.9.1",

    # Logging & Monitoring
    "structlog==24.1.0",
    "python-json-logger==2.0.7",
    "prometheus-client==0.19.0",

    # Configuration
    "python-dotenv==1.0.0",
    "pyyaml==6.0.1",

    # WebSocket Support
    "websockets==12.0",
    "python-socketio==5.11.0",

    # Background Tasks
    "celery==5.3.6",

    # Utilities
    "tenacity==8.2.3",
    "cachetools==5.3.2",
    "python-slugify==8.0.1",
    "pytz==2024.1",
    "ujson==5.9.0",
    "orjson==3.9.12",

    # Production WSGI Server
    "gunicorn==21.2.0",

    # Environment & Process Management
    "supervisor==4.2.5",

    # Data Validation
    "email-validator==2.1.0",
    "phonenumbers==8.13.27",

    # Rate Limiting
    "slowapi==0.1.9",

    # CORS (Note: FastAPI has built-in CORS, fastapi-cors may be redundant)
    "fastapi-cors==0.0.6",

    # Health Checks
    "py-healthcheck==1.10.1",

    # Metrics
    "statsd==4.0.1",

    # CLI Libraries (for production_cli_interface.py)
    "click==8.1.7",
    "typer==0.9.0",
    "rich==13.7.0",

    # Web Scraping (for scrapers/production_scraper.py)
    "beautifulsoup4==4.12.3",
    "selenium==4.16.0",

    # File Operations
    "aiofiles==23.2.1",
]

# ============================================================================
# OPTIONAL DEPENDENCIES
# ============================================================================

[project.optional-dependencies]

# Development dependencies
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "faker==22.5.1",
    "black==24.1.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
    "isort==5.13.2",
]

# Documentation dependencies
docs = [
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.6",
]

# AWS deployment (uncomment when deploying to AWS)
aws = [
    # "boto3==1.34.25",
    # "botocore==1.34.25",
]

# Translation service dependencies (from requirements-translation.txt)
# Note: Removed googletrans due to httpx version conflict (requires 0.13.3 vs our 0.26.0)
# Using deep-translator as primary translation library (compatible with all dependencies)
translation = [
    "deep-translator==1.11.4",
    "langdetect==1.0.9",
]

# ============================================================================
# BUILD SYSTEM
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ============================================================================
# UV CONFIGURATION
# ============================================================================

[tool.uv]
# Use lockfile for deterministic, reproducible builds
dev-dependencies = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.1",
    "mypy>=1.8.0",
]

# Index URLs (default: PyPI)
index-url = "https://pypi.org/simple"

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "bs4.*",
    "chromadb.*",
    "neo4j.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "unit: marks tests as unit tests",
]

# ============================================================================
# PROJECT METADATA
# ============================================================================

[project.urls]
Homepage = "https://github.com/your-org/horme-pov"
Documentation = "https://docs.example.com"
Repository = "https://github.com/your-org/horme-pov.git"
Issues = "https://github.com/your-org/horme-pov/issues"

# ============================================================================
# NOTES
# ============================================================================
#
# UV Migration Benefits:
# - 10-100x faster dependency installation
# - Deterministic builds with uv.lock
# - 68% reduction in duplicate declarations
# - Single source of truth for dependencies
#
# Sub-Project Isolation:
# - src/new_project/ keeps separate requirements-production.txt
# - src/knowledge_graph/ keeps separate requirements.txt
# - src/intent_classification/ keeps separate requirements.txt
# - tests/ keeps separate requirements-test.txt
#
# Cloud Deployment:
# - All services use this pyproject.toml
# - Docker images built with UV for faster CI/CD
# - See Dockerfile.api.uv, Dockerfile.websocket.uv, Dockerfile.nexus.uv
#
# Production Standards:
# - NO hardcoded values (all use src.core.config)
# - NO mock data (all use real databases)
# - NO localhost in production (use Docker service names)
# - All secrets via environment variables (.env.production)
#
# ============================================================================
