# ==============================================================================
# Dynamic Job Pricing Engine - Project Configuration
# ==============================================================================
# Uses uv for fast, reliable dependency management
# Install uv: https://github.com/astral-sh/uv
# Usage: uv sync
# ==============================================================================

[project]
name = "job-pricing-engine"
version = "0.1.0"
description = "AI-Powered Dynamic Job Pricing Engine"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }

# ==============================================================================
# Production Dependencies
# ==============================================================================
dependencies = [
    # Web Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.12.1",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.3",

    # Redis
    "redis>=5.0.1",
    "hiredis>=2.2.3",

    # AI/ML
    "openai>=1.3.0",
    "tiktoken>=0.5.1",

    # Task Queue
    "celery>=5.3.4",
    "kombu>=5.3.4",

    # Web Scraping
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "webdriver-manager>=4.0.1",

    # Data Processing
    "pandas>=2.1.3",
    "openpyxl>=3.1.2",
    "numpy>=1.26.2",
    "xlrd>=2.0.1",

    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.1.1",

    # HTTP Client
    "httpx>=0.25.1",
    "requests>=2.31.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",

    # Validation & Serialization
    "email-validator>=2.1.0",

    # Logging & Monitoring
    "structlog>=23.2.0",
    "sentry-sdk>=1.38.0",
]

# ==============================================================================
# Development & Testing Dependencies
# ==============================================================================
[project.optional-dependencies]
dev = [
    # Development Tools
    "ipython>=8.17.2",
    "ipdb>=0.13.13",

    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=20.0.3",

    # Code Quality
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",

    # Type Stubs
    "types-redis>=4.6.0.11",
    "types-requests>=2.31.0.10",
    "types-python-dateutil>=2.8.19.14",

    # Documentation
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
]

# ==============================================================================
# Build System
# ==============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ==============================================================================
# Tool Configurations
# ==============================================================================

[tool.uv]
# UV-specific configuration
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

[tool.pytest.ini_options]
testpaths = ["src/job_pricing/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--color=yes",
    "--strict-markers",
    "--tb=short",
    "--cov=src/job_pricing",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-ra",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
    "slow: Slow running tests",
    "asyncio: Async tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/job_pricing"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
# Security linting configuration
exclude_dirs = [
    ".venv",
    "venv",
    "tests",
    "node_modules",
    ".git",
]
skips = [
    "B101",  # assert_used - asserts are OK in tests
    "B601",  # paramiko_calls - we use subprocess intentionally
]
# Severity levels: low, medium, high
severity = ["medium", "high"]

# ==============================================================================
# Installation Instructions:
#
# 1. Install uv (if not already installed):
#    curl -LsSf https://astral.sh/uv/install.sh | sh  # Linux/Mac
#    powershell -c "irm https://astral.sh/uv/install.ps1 | iex"  # Windows
#
# 2. Create virtual environment and install dependencies:
#    uv venv
#    uv sync
#
# 3. Install with dev dependencies:
#    uv sync --extra dev
#
# 4. Activate virtual environment:
#    source .venv/bin/activate  # Linux/Mac
#    .venv\Scripts\activate     # Windows
#
# 5. Run the application:
#    uvicorn src.job_pricing.api.main:app --reload
#
# ==============================================================================
